--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-	<title>Svelte app</title>
+    <title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel="icon" type="image/jpg" href="/favicon.jpg" />
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/build/bundle.css" />
 
-	<script defer src='/build/bundle.js'></script>
-</head>
+    <link
+      href="http://webapplayers.com/inspinia_admin-v2.8/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="http://webapplayers.com/inspinia_admin-v2.8/font-awesome/css/font-awesome.css"
+      rel="stylesheet"
+    />
+    <link
+      href="http://webapplayers.com/inspinia_admin-v2.8/css/animate.css"
+      rel="stylesheet"
+    />
+    <link
+      href="http://webapplayers.com/inspinia_admin-v2.8/css/style.css"
+      rel="stylesheet"
+    />
 
-<body>
-</body>
+    <script defer src="/build/bundle.js"></script>
+
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/jquery-3.1.1.min.js"></script>
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/popper.min.js"></script>
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/bootstrap.js"></script>
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+    <!-- Custom and plugin javascript -->
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/inspinia.js"></script>
+    <script src="http://webapplayers.com/inspinia_admin-v2.8/js/plugins/pace/pace.min.js"></script>
+  </head>
+
+  <body class="pace-done"></body>
 </html>
