--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <link rel="icon" type="image/jpg" href="/favicon.jpg" />
     <link rel="stylesheet" href="/global.css" />
+    <!-- <link rel="stylesheet" href="/tailwind.css" /> -->
     <link rel="stylesheet" href="/build/bundle.css" />
 
     <script defer src="/build/bundle.js"></script>
